--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -37,7 +37,6 @@ archives:
       - "go.mod"
       - "go.sum"
       - "LICENSE"
-      - "README.md"
 
 # Docker configuration
 dockers:
@@ -61,6 +60,9 @@ dockers:
     extra_files:
       - go.mod
       - go.sum
+      - cmd/
+      - internal/
+      - pkg/
     goarch: amd64
   - image_templates:
       - "ghcr.io/umatare5/wnc:latest-arm64"
@@ -82,6 +84,9 @@ dockers:
     extra_files:
       - go.mod
       - go.sum
+      - cmd/
+      - internal/
+      - pkg/
     goarch: arm64
 
 # Docker manifest for multi-platform images
@@ -129,7 +134,6 @@ release:
     go install github.com/umatare5/wnc@v{{ .Version }}
     ```
 
-    ### What's Changed
   footer: |
     **Full Changelog**: https://github.com/umatare5/wnc/compare/{{ .PreviousTag }}...{{ .Tag }}
 
