--- a/.github/workflows/golangci-lint.yaml
+++ b/.github/workflows/golangci-lint.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@0aaccfd150d50ccaeb58ebd88d36e91967a5f35b # v5.4.0
         with:
-          go-version: "1.24"
+          go-version: "1.24.4"
 
       # Cache golangci-lint binary for faster execution
       - name: Cache golangci-lint
@@ -33,10 +33,16 @@ jobs:
       # Install golangci-lint
       - name: Install golangci-lint
         run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.2
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.62.2
+
+      # Clean and setup Go modules
+      - name: Clean Go cache and modules
+        run: |
+          go clean -modcache -cache -testcache
+          go mod download
+          go mod tidy
 
       # Run golangci-lint
       - name: Run golangci-lint
         run: |
-          go mod tidy
           golangci-lint run --timeout 5m
