ci: add comprehensive debugging for golangci-lint issues
- Add detailed Go environment verification with module listing
- Add basic build test before linting
- Add import verification step to catch circular dependencies
- Add verbose output and resource usage tracking to golangci-lint
- Remove redundant build step since golangci-lint will handle building

These debug steps will help identify the root cause if CI-specific
errors persist after the previous cache and version improvements.

--- a/.github/workflows/golangci-lint.yaml
+++ b/.github/workflows/golangci-lint.yaml
@@ -50,11 +50,15 @@ jobs:
         run: |
           go version
           go env
+          echo "=== Checking Go modules ==="
           go list -m all
+          echo "=== Testing basic build ==="
+          go build ./...
+          echo "=== Verifying imports ==="
+          go list -f '{{.ImportPath}}: {{.Imports}}' ./...
 
       # Run golangci-lint
       - name: Run golangci-lint
         run: |
-          # Force rebuild from scratch to avoid cache issues
-          go build -a ./...
-          golangci-lint run --timeout 5m
+          echo "=== Running golangci-lint with verbose output ==="
+          golangci-lint run --timeout 5m --verbose --print-resources-usage
